--- a/web-page/src/app/globals.css
+++ b/web-page/src/app/globals.css
@@ -19,3 +19,56 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.2rem;
+  margin: .1rem;
+  border: 1px solid whitesmoke;
+  border-radius: 0.5rem;
+  height: 10rem;
+  width: 10rem;
+}
+
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: .1rem;
+  width: 80%;
+}
+
+.view {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.submit {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 1px solid var(--foreground);
+  border-radius: 0.5rem;
+  background: var(--foreground);
+  color: var(--background);
+}
+
+.bighead {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 1rem;
+}
